# Ares

./: .gitignore  :w  Cargo.toml  ares-0.2.0-x86_64.msi  main.wixobj  mitra_wifi6_files  run
log/78E9CF070231/log/: 78E9CF070231_rsx_log  78E9CF070231_xmd_log
resources/: mitra_econet_encryption_js.html  mitra_econet_login.js  response.html  test
src/: crypt.rs  device.rs  error.rs  fetch.rs  form.rs  lib.rs  log.rs  main.rs  test.rs
src/crypt/: mod.rs
src/device/: mod.rs  model.rs
src/fetch/: askey_econet.rs  askey_lc.rs  form.rs  mitra_econet.rs  mitra_lc.rs  mitra_wifi6.rs  mod.rs  variant.rs
src/script/: mitra_econet_login.js
src/test/: askey_econet.rs  mitra_econet.rs  mitra_wifi6.rs  mod.rs
wix/: main.wxs
