[package]
name = "ares"
version = "0.1.1"
edition = "2024"

[dependencies]
tokio = { version = "1.44.1", features = ["full"] }
reqwest = { version = "0.12.14", features = ["cookies", "json"] }
regex = "1.11.1"
scraper = "0.23.1"
md5 = "0.7.0"
clap = "4.5.37"
# serde_json = "1.0.140"
# serde-xml-rs = "0.6.0"
# serde = { version = "1.0.219", features = ["derive"] }
# ron = "0.9.0"
